--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Batuhan Topcu</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
-	<link rel="icon" href="favicon.png" />
+	<link rel="icon" href="https://png.pngtree.com/png-vector/20210302/ourmid/pngtree-letter-b-logo-png-image_2978120.jpg" />
 	<link rel="preload" as="style"
 		href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap" />
 	<link rel="stylesheet"
